[package]
name = "solendrix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.1"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"
